--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
       max-lifetime: 1000
       auto-commit: true
     username: postgres
-    password: 6Dm476&0
+    password: 82^Pn4so
   jpa:
     properties:
       hibernate:
@@ -63,12 +63,12 @@ spring:
     activate:
       on-profile: 'docker'
   datasource:
-    url: 'jdbc:postgresql://5.161.176.31:5432/niffler-auth'
+    url: 'jdbc:postgresql://5.161.223.157:5432/niffler-auth'
   jpa:
     hibernate:
       ddl-auto: validate
 niffler-front:
-  base-uri: 'http://5.161.176.31'
+  base-uri: 'http://5.161.223.157'
 niffler-auth:
-  base-uri: 'http://5.161.176.31:9000'
+  base-uri: 'http://5.161.223.157:9000'
 ---
