--- a/.github/workflows/niffler-auth-prod.yaml
+++ b/.github/workflows/niffler-auth-prod.yaml
@@ -24,3 +24,8 @@ jobs:
          docker-compose up -d --force-recreate niffler-auth
          docker system prune  -a -f
          echo "done"
+      - name: push
+        run: |
+         docker login
+         docker tag dtuchs/niffler-auth:latest ${{ vars.DOCKER_HUB_ACC }}/niffler-auth:${{github.run_number}}
+         docker push ${{ vars.DOCKER_HUB_ACC }}/niffler-auth:${{github.run_number}}
