--- a/.github/workflows/niffler-frontend-prod.yaml
+++ b/.github/workflows/niffler-frontend-prod.yaml
@@ -35,5 +35,9 @@ jobs:
         run : |
          docker-compose up -d niffler-frontend
          echo "done"
-
+      - name: push
+        run: |
+         docker login --username ${{ vars.DOCKER_HUB_ACC }} --password "${{ secrets.DOCKER_HUB_PASSWORD }}"
+         docker tag dtuchs/niffler-frontend:latest ${{ vars.DOCKER_HUB_ACC }}/niffler-frontend:${{github.run_number}}
+         docker push ${{ vars.DOCKER_HUB_ACC }}/niffler-frontend:${{github.run_number}}
         
