--- a/niffler-spend/src/main/resources/application.yaml
+++ b/niffler-spend/src/main/resources/application.yaml
@@ -64,7 +64,7 @@ spring:
     activate:
       on-profile: 'docker'
   datasource:
-    url: 'jdbc:postgresql://niffler-all-db:5432/niffler-spend'
+    url: 'jdbc:postgresql://5.161.176.31:5432/niffler-spend'
   jpa:
     hibernate:
       ddl-auto: validate
