--- a/niffler-userdata/src/main/resources/application.yaml
+++ b/niffler-userdata/src/main/resources/application.yaml
@@ -16,7 +16,7 @@ spring:
       max-lifetime: 1000
       auto-commit: true
     username: postgres
-    password: 6Dm476&0
+    password: 82^Pn4so
   jpa:
     properties:
       hibernate:
