--- a/.github/workflows/niffler-currency-prod.yaml
+++ b/.github/workflows/niffler-currency-prod.yaml
@@ -1,8 +1,8 @@
-name: currency_deploy_stage
+name: currency_deploy_prod
 on:
   push:
     branches: 
-      - master
+      - ci-prod
     paths:
       - 'niffler-currency/**'
       
