--- a/.github/workflows/niffler-gateway-prod.yaml
+++ b/.github/workflows/niffler-gateway-prod.yaml
@@ -2,7 +2,7 @@ name: gateway_deploy_prod
 on:
   push:
     branches: 
-      - master
+      - ci-prod
     paths:
       - 'niffler-gateway/**'
       
