pass selenoid arch to docker-compose.test.yml

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -105,7 +105,8 @@ services:
 
   selenoid:
     container_name: selenoid
-    image: aerokube/selenoid:1.10.10
+    image: aerokube/selenoid:1.10.12
+    platform: "${ARCH}"
     volumes:
       - ./selenoid:/etc/selenoid
       - /var/run/docker.sock:/var/run/docker.sock
