--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -25,6 +25,37 @@ services:
       - test-network
     dns_search: .
 
+  zookeeper:
+    container_name: zookeeper
+    image: confluentinc/cp-zookeeper:7.3.2
+    expose:
+      - "2181"
+    environment:
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
+    networks:
+      - test-network
+    dns_search: .
+
+  kafka:
+    container_name: kafka
+    image: confluentinc/cp-kafka:7.3.2
+    expose:
+      - "9092"
+    depends_on:
+      zookeeper:
+        condition: service_started
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
+      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
+    networks:
+      - test-network
+    dns_search: .
+
   auth.niffler.dc:
     container_name: auth.niffler.dc
     image: dtuchs/niffler-auth:latest
@@ -38,6 +69,8 @@ services:
     depends_on:
       niffler-all-db:
         condition: service_healthy
+      kafka:
+        condition: service_started
     networks:
       - test-network
     dns_search: .
@@ -62,7 +95,7 @@ services:
       - "8090:8090"
     depends_on:
       auth.niffler.dc:
-        condition: service_started
+        condition: service_healthy
     networks:
       - test-network
     dns_search: .
@@ -85,7 +118,7 @@ services:
     expose:
       - "8089"
     depends_on:
-      niffler-all-db:
+      auth.niffler.dc:
         condition: service_healthy
     networks:
       - test-network
@@ -111,7 +144,7 @@ services:
       - ./selenoid:/etc/selenoid
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
-    command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "3", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "niffler_test-network" ]
+    command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "4", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "niffler_test-network" ]
     ports:
       - "4444:4444"
     networks:
