--- a/niffler-userdata/src/main/resources/application.yaml
+++ b/niffler-userdata/src/main/resources/application.yaml
@@ -33,9 +33,8 @@ spring:
 logging:
   level:
     root: INFO
-    org.springframework.web: DEBUG
-    org.springframework.security: DEBUG
-    org.springframework.security.oauth2: DEBUG
+    org.springframework.kafka: DEBUG
+    org.springframework.web: INFO
 #    org.springframework.boot.autoconfigure: DEBUG
 
 ---
