--- a/niffler-auth/build.gradle
+++ b/niffler-auth/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.1'
+    id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'com.palantir.docker' version '0.34.0'
 }
@@ -19,7 +19,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-validation"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
-    implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.0.0'
+    implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.1.1'
     implementation 'org.springframework.kafka:spring-kafka:3.0.7'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -34,7 +34,7 @@ docker {
     noCache true
 }
 
-task dockerRmi(type: Exec) {
+tasks.register('dockerRmi', Exec) {
     workingDir "${buildDir}"
     commandLine 'bash', '-c', "docker rmi -f \$(docker images | grep 'niffler')\n"
 }
