--- a/niffler-currency/build.gradle
+++ b/niffler-currency/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.1'
+    id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'com.palantir.docker' version '0.34.0'
 }
@@ -31,7 +31,7 @@ docker {
     noCache true
 }
 
-task dockerRmi(type: Exec) {
+tasks.register('dockerRmi', Exec) {
     workingDir "${buildDir}"
     commandLine 'bash', '-c', "docker rmi -f \$(docker images | grep 'niffler')\n"
 }
