--- a/.github/workflows/niffler-auth-prod.yaml
+++ b/.github/workflows/niffler-auth-prod.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
          pwd
          bash ./docker-compose-dev-ci.sh
-         docker-compose up -d --force-recreate niffler-auth
+         docker-compose up -d --force-recreate auth.niffler.dc
          docker system prune  -a -f
          echo "done"
       - name: push
