--- a/.github/workflows/vault-test.yml
+++ b/.github/workflows/vault-test.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           url: https://vault.qa.guru
           token: $ {{ secrets.VAULT_TOKEN }}
+          tlsSkipVerify: true
           caCertificate: $ {{ secrets.VAULT_CA_CERT }}
           secrets: |
             kv/secret/data secret
