--- a/.github/workflows/vault-test.yml
+++ b/.github/workflows/vault-test.yml
@@ -15,6 +15,8 @@ jobs:
           token: $ {{ secrets.VAULT_TOKEN }}
           tlsSkipVerify: true
           caCertificate: $ {{ secrets.VAULT_CA_CERT }}
+          secrets: |
+            /kv/data/secret anothersecret ;
       - name: show secrets
         run: |
           echo "${{ toJson(steps.import-secrets.outputs) }}"
