--- a/.github/workflows/vault-test.yml
+++ b/.github/workflows/vault-test.yml
@@ -16,10 +16,10 @@ jobs:
           tlsSkipVerify: true
           caCertificate: $ {{ secrets.VAULT_CA_CERT }}
           secrets: |
-            vault kv get kv/secret/gh
-            secret/gh ghsecret ;
-            kv/data/secret/gh ghsecret ;
-            kv/secret/gh ghsecret ;
+            #secret/gh ghsecret ;
+            #kv/data/secret/gh ghsecret ;
+            #kv/secret/gh ghsecret ;
       - name: show secrets
         run: |
+          vault kv get kv/secret/gh
           echo "${{ toJson(steps.import-secrets.outputs) }}"
