--- a/.github/workflows/vault-test.yml
+++ b/.github/workflows/vault-test.yml
@@ -22,6 +22,6 @@ jobs:
           echo $ {{ env.SECRET }}
           echo ${{ steps.import-secrets.outputs.SECRET }}
           touch secrets.json
-          echo ${{ toJson(steps.import-secrets.outputs) }} > secrets.json
+          echo "${{ toJson(steps.import-secrets.outputs) }}" > secrets.json
           cat secrets.json
           echo $SECRET
