--- a/niffler-e2e-dtitar-tests/src/test/resources/config/docker.properties
+++ b/niffler-e2e-dtitar-tests/src/test/resources/config/docker.properties
@@ -1,8 +1,15 @@
-frontUrl=http://frontend.niffler.dc/
-gatewayUrl=http://gateway.niffler.dc:8090/
-userdataUrl=http://userdata.niffler.dc:8089/
-currencyGrpcAddress=currency.niffler.dc
-spendUrl=http://spend.niffler.dc:8093/
-authUrl=http://auth.niffler.dc:9000/
-databaseAddress=niffler-all-db:5432
-kafkaAddress=kafka:9092
+web.frontUrl=http://frontend.niffler.dc/
+
+api.gatewayUrl=http://gateway.niffler.dc:8090/
+api.userdataUrl=http://userdata.niffler.dc:8089/
+api.spendUrl=http://spend.niffler.dc:8093/
+api.authUrl=http://auth.niffler.dc:9000/
+
+grpc.currencyAddress=currency.niffler.dc
+
+db.address=niffler-all-db:5432
+
+kafka.address=kafka:9092
+
+driver.browserSize=1920x1200
+driver.remoteUrl=http://selenoid:4444/wd/hub
