--- a/niffler-e2e-dtitar-tests/src/test/resources/config/local.properties
+++ b/niffler-e2e-dtitar-tests/src/test/resources/config/local.properties
@@ -1,8 +1,15 @@
-frontUrl=http://127.0.0.1:3000/
-gatewayUrl=http://127.0.0.1:8090/
-userdataUrl=http://127.0.0.1:8089/
-currencyGrpcAddress=127.0.0.1
-spendUrl=http://127.0.0.1:8093/
-authUrl=http://127.0.0.1:9000/
-databaseAddress=127.0.0.1:5432
-kafkaAddress=127.0.0.1:9092
+web.frontUrl=http://127.0.0.1:3000/
+
+api.gatewayUrl=http://127.0.0.1:8090/
+api.userdataUrl=http://127.0.0.1:8089/
+api.spendUrl=http://127.0.0.1:8093/
+api.authUrl=http://127.0.0.1:9000/
+
+grpc.currencyAddress=127.0.0.1
+
+db.address=127.0.0.1:5432
+
+kafka.address=127.0.0.1:9092
+
+driver.browserSize=1920x1200
+driver.remoteUrl=
