--- a/niffler-spend/build.gradle
+++ b/niffler-spend/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.0'
-    id 'io.spring.dependency-management' version '1.1.0'
-    id 'com.palantir.docker' version '0.34.0'
+    id 'org.springframework.boot' version '3.1.3'
+    id 'io.spring.dependency-management' version '1.1.3'
+    id 'com.palantir.docker' version '0.35.0'
 }
 
 group 'guru.qa'
-version '0.0.6-SNAPSHOT'
+version '0.0.7-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -20,8 +20,12 @@ dependencies {
     implementation 'net.devh:grpc-client-spring-boot-starter:2.14.0.RELEASE'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.mockito:mockito-core:5.1.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.1.1'
+    testImplementation 'org.mockito:mockito-core:5.5.0'
+    testImplementation("org.mockito:mockito-junit-jupiter:5.5.0") {
+        exclude group: "org.junit.jupiter-api"
+        exclude group: "org.junit.platform"
+        exclude group: "org.junit.jupiter"
+    }
 }
 
 docker {
