--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -6,7 +6,7 @@ services:
     image: postgres:15.1
     environment:
       - POSTGRES_MULTIPLE_DATABASES="niffler-auth","niffler-currency","niffler-spend","niffler-userdata"
-      - POSTGRES_USER=postgres
+      - PGUSER=postgres
       - POSTGRES_PASSWORD=secret
     volumes:
       - ./postgres:/docker-entrypoint-initdb.d
@@ -134,13 +134,13 @@ services:
 
   selenoid:
     container_name: selenoid
-    image: aerokube/selenoid:1.10.12
+    image: aerokube/selenoid:1.11.0
     platform: "${ARCH}"
     volumes:
       - ./selenoid:/etc/selenoid
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
-    command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "4", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "niffler_test-network" ]
+    command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "3", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "niffler_test-network" ]
     ports:
       - "4444:4444"
     networks:
@@ -149,7 +149,7 @@ services:
 
   selenoid-ui:
     container_name: selenoid-ui
-    image: aerokube/selenoid-ui:1.10.9
+    image: aerokube/selenoid-ui:1.10.10
     depends_on:
       - selenoid
     restart: unless-stopped
