--- a/niffler-spend/build.gradle
+++ b/niffler-spend/build.gradle
@@ -2,11 +2,11 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.3'
     id 'io.spring.dependency-management' version '1.1.3'
-    id 'com.palantir.docker' version '0.35.0'
+    id 'com.google.cloud.tools.jib' version '3.3.2'
 }
 
 group 'guru.qa'
-version '0.0.7-SNAPSHOT'
+version '0.0.8-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -28,18 +28,25 @@ dependencies {
     }
 }
 
-docker {
-    dependsOn build
-    name "dtuchs/niffler-spend:${project.version}"
-    tag 'latest', 'dtuchs/niffler-spend:latest'
-    files bootJar.archiveFile
-    buildArgs([APP_VER: project.version, DOCKER: project.ext.dockerImage])
-    noCache true
-}
-
-tasks.register('dockerRmi', Exec) {
-    workingDir "${buildDir}"
-    commandLine 'bash', '-c', "docker rmi -f \$(docker images | grep 'niffler')\n"
+jib {
+    container {
+        ports = ['8093']
+        jvmFlags = ['-Dspring.profiles.active=docker']
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+    }
+    from {
+        image = "${project.ext.dockerImage}"
+        platforms {
+            platform {
+                architecture = "${project.ext.dockerArch}"
+                os = 'linux'
+            }
+        }
+    }
+    to {
+        image = "dtuchs/${project.name}"
+        tags = ['latest', "${project.version}"]
+    }
 }
 
 tasks.named('test') {
