prepare to prod configs

--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,12 @@ group = 'guru.qa'
 version = '0.0.8-SNAPSHOT'
 sourceCompatibility = '17'
 
-repositories {
-    mavenCentral()
-}
-
 subprojects {
+    repositories {
+        mavenCentral()
+    }
     ext {
+        dockerHubName = "qaguru"
         dockerImage = System.getProperty("os.arch") == "aarch64" || System.getProperty("os.arch") == "arm64"
                 ? "arm64v8/eclipse-temurin:19-jre"
                 : "eclipse-temurin:19-jre"
