--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -54,7 +54,7 @@ services:
 
   auth.niffler.dc:
     container_name: auth.niffler.dc
-    image: dtuchs/niffler-auth:latest
+    image: ${PREFIX}/niffler-auth:latest
     ports:
       - "9000:9000"
     healthcheck:
@@ -73,7 +73,7 @@ services:
 
   currency.niffler.dc:
     container_name: currency.niffler.dc
-    image: dtuchs/niffler-currency:latest
+    image: ${PREFIX}/niffler-currency:latest
     expose:
       - "8091"
       - "8092"
@@ -86,7 +86,7 @@ services:
 
   gateway.niffler.dc:
     container_name: gateway.niffler.dc
-    image: dtuchs/niffler-gateway:latest
+    image: ${PREFIX}/niffler-gateway:latest
     ports:
       - "8090:8090"
     depends_on:
@@ -98,7 +98,7 @@ services:
 
   spend.niffler.dc:
     container_name: spend.niffler.dc
-    image: dtuchs/niffler-spend:latest
+    image: ${PREFIX}/niffler-spend:latest
     expose:
       - "8093"
     depends_on:
@@ -110,7 +110,7 @@ services:
 
   userdata.niffler.dc:
     container_name: userdata.niffler.dc
-    image: dtuchs/niffler-userdata:latest
+    image: ${PREFIX}/niffler-userdata:latest
     expose:
       - "8089"
     depends_on:
@@ -162,7 +162,7 @@ services:
 
   niffler-e-2-e:
     container_name: niffler-e-2-e
-    image: dtuchs/niffler-e-2-e-tests
+    image: ${PREFIX}/niffler-e-2-e-tests
     depends_on:
       frontend.niffler.dc:
         condition: service_started
