--- a/.github/workflows/niffler-auth-stage.yaml
+++ b/.github/workflows/niffler-auth-stage.yaml
@@ -1,26 +1,26 @@
-name: auth_deploy_stage
-on:
-  push:
-    branches: 
-      - ci
-    paths:
-      - 'niffler-auth/**'
+# name: auth_deploy_stage
+# on:
+#   push:
+#     branches: 
+#       - ci
+#     paths:
+#       - 'niffler-auth/**'
       
-jobs:
-  checkout:
-    runs-on: stage-runner  
-    steps:
-      - uses: actions/checkout@v3
+# jobs:
+#   checkout:
+#     runs-on: stage-runner  
+#     steps:
+#       - uses: actions/checkout@v3
 
-  deploy:
-    runs-on: stage-runner
-    needs: checkout
-    steps:  
-      - name: build
-        working-directory: ./
-        run: |
-         pwd
-         bash ./docker-compose-dev.sh
-         docker-compose up -d --force-recreate niffler-auth
-         docker system prune  -a -f
-         echo "done"
+#   deploy:
+#     runs-on: stage-runner
+#     needs: checkout
+#     steps:  
+#       - name: build
+#         working-directory: ./
+#         run: |
+#          pwd
+#          bash ./docker-compose-dev.sh
+#          docker-compose up -d --force-recreate niffler-auth
+#          docker system prune  -a -f
+#          echo "done"
