--- a/docker.properties
+++ b/docker.properties
@@ -2,6 +2,7 @@ IMAGE_PREFIX=qaguru
 TEST_IMAGE_NAME=niffler-e-2-e-tests
 FRONT_IMAGE_NAME=niffler-frontend
 FRONT_IMAGE_NAME_GQL=niffler-frontend-gql
-NPM_TEST_BUILD=build:test
-NPM_DEV_BUILD=build:docker
-VERSION=0.0.8-SNAPSHOT
+NPM_DOCKER_BUILD=build:docker
+NPM_STAGING_BUILD=build:staging
+NPM_PROD_BUILD=build:prod
+FRONT_VERSION=1.0.1
